--- a/Uso de funciones.ipynb
+++ b/Uso de funciones.ipynb
@@ -379,11 +379,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "996c9019",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from multivariate_linear_regression import batch_gradient_descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e591ed83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_gradient_descent()"
+   ]
   }
  ],
  "metadata": {
