--- a/2. Implementación de las funciones en (A).ipynb
+++ b/2. Implementación de las funciones en (A).ipynb
@@ -768,7 +768,8 @@
     "    sns.distplot(df['charges'])\n",
     "except:\n",
     "    sns.displot(df['charges'])\n",
-    "    plt.title('Charges distribution')\n",
+    "    \n",
+    "plt.title('Charges distribution')\n",
     "plt.show()"
    ]
   },
@@ -1124,7 +1125,7 @@
     }
    ],
    "source": [
-    "df"
+    "df.head(5)"
    ]
   },
   {
@@ -1133,6 +1134,14 @@
    "metadata": {},
    "source": [
     "### Correlación entre las columnas de datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cc97f3c",
+   "metadata": {},
+   "source": [
+    "Los que tienen mayor correlación son \"_age_\" y \"_smoker_\", sin embargo se agregarán tambien las columnas \"_bmi_\" y \"_children_\", esto se determinó de manera empírica realizando varias pruebas. Para una mejor visualización de las correlaciones se presenta un _heat map_, donde los puntos de interés son las filas y columnas asociadas con el _target_ \"_charge_\"."
    ]
   },
   {
@@ -1345,14 +1354,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1cc97f3c",
-   "metadata": {},
-   "source": [
-    "Los que tienen mayor correlación son age y smoker."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "c18d8463",
@@ -1377,6 +1378,14 @@
     "plt.figure(figsize=(10,10))\n",
     "sns.heatmap(df.corr(), annot=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5307c3cc",
+   "metadata": {},
+   "source": [
+    "Utilizando la librería **seaborn** se presentan las gráficas de dispersión, conteo e histogramas por pareja de datos (columna) del dataframe, centrándose en la fila de \"_charges_\"  puede observase en primera instancia no existe algún tipo de relación lineal bien definida en las gráficas de dispersión. "
    ]
   },
   {
@@ -1411,6 +1420,14 @@
    "metadata": {},
    "source": [
     "### Definición de los features y creación de los dataframes X y Y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3fc1465",
+   "metadata": {},
+   "source": [
+    "Mostrando las primeras 3 filas y las columnas del dataframe final, en donde se incluyen los identificadores 0 y 1 para las columnas _sex_, _smoker_, _northeast_, _northwest_, _southeast_ y _southwest_."
    ]
   },
   {
@@ -1518,13 +1535,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1327f4e",
+   "metadata": {},
+   "source": [
+    "Realizando pruebas con los algoritgos de regresión lineal creados se llegó a la conclusión que el mejor desempeño se logra cuando se utilizan como features únicamente las columnas _age_, _bmi_, _children_ y _smoker_, por lo que estas fueron selecionadas para crear el dataframe **X**. Para los targets se creó el dataframe **Y** donde se incluye unicamente la columna _charges_."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "132de7a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df[['age', 'bmi', 'children', 'smoker']]# df[['age', 'bmi', 'smoker']]\n",
+    "X = df[['age', 'bmi', 'children', 'smoker']]\n",
     "Y = df[['charges']]"
    ]
   },
@@ -1674,6 +1699,14 @@
    },
    "source": [
     "### Normalizando datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff5eefd2",
+   "metadata": {},
+   "source": [
+    "Para la normalización de los datos, y con el fin de no utilizar momentaneamente la librería sklearn, se creo la función ``min_max()``, la cual normaliza los datos de 0 a 1 utilizando los valores mínimos y máximos de cada columna de datos. Así mismo, se creo la función ``denormalize()`` para desnormalizar los datos en caso de ser necesario, sin embargo, únicamente los features fueron normalizados no fue necesario su uso (se usaría normalmente para desnormalizar los datos predichos y presentarlos). "
    ]
   },
   {
