--- a/Polynominal Regression.ipynb
+++ b/Polynominal Regression.ipynb
@@ -238,8 +238,7 @@
    "source": [
     "X_quad = pd.DataFrame(X_quad)\n",
     "y = pd.DataFrame(y)\n",
-    "theta, test_index, train_index, Y_predict = normal_equation_ply(X_quad, y, 20)\n",
-    "x = pd.DataFrame(x)"
+    "theta, test_index, train_index, Y_predict = normal_equation_ply(X_quad, y, 20)"
    ]
   },
   {
